k8sbfr-my-ingress/deploy-k8sbfr-ingress-controleur.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/instance: k8sbfr-my-ingress
    app.kubernetes.io/name: k8sbfr-my-ingress
  name: k8sbfr-my-ingress
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: k8sbfr-my-ingress
    app.kubernetes.io/name: k8sbfr-my-ingress
    app.kubernetes.io/part-of: k8sbfr-my-ingress
    app.kubernetes.io/version: 1.11.2
  name: k8sbfr-my-ingress-controller
  namespace: k8sbfr-my-ingress
spec:
  externalTrafficPolicy: Local
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - appProtocol: http
    name: http
    port: 80
    protocol: TCP
    targetPort: http
  - appProtocol: https
    name: https
    port: 443
    protocol: TCP
    targetPort: https
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: k8sbfr-my-ingress
    app.kubernetes.io/name: k8sbfr-my-ingress
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: k8sbfr-my-ingress
    app.kubernetes.io/name: k8sbfr-my-ingress
    app.kubernetes.io/part-of: k8sbfr-my-ingress
    app.kubernetes.io/version: 1.11.2
  name: k8sbfr-my-ingress-controller-admission
  namespace: k8sbfr-my-ingress
spec:
  ports:
  - appProtocol: https
    name: https-webhook
    port: 443
    targetPort: webhook
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: k8sbfr-my-ingress
    app.kubernetes.io/name: k8sbfr-my-ingress
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: k8sbfr-my-ingress
    app.kubernetes.io/name: k8sbfr-my-ingress
    app.kubernetes.io/part-of: k8sbfr-my-ingress
    app.kubernetes.io/version: 1.11.2
  name: k8sbfr-my-ingress-controller
  namespace: k8sbfr-my-ingress
spec:
  minReadySeconds: 0
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: k8sbfr-my-ingress
      app.kubernetes.io/name: k8sbfr-my-ingress
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: controller
        app.kubernetes.io/instance: k8sbfr-my-ingress
        app.kubernetes.io/name: k8sbfr-my-ingress
        app.kubernetes.io/part-of: k8sbfr-my-ingress
        app.kubernetes.io/version: 1.11.2
    spec:
      containers:
      - args:
        - /nginx-ingress-controller
        - --publish-service=$(POD_NAMESPACE)/k8sbfr-my-ingress-controller
        - --election-id=k8sbfr-my-ingress-leader
        - --controller-class=registry.k8s.io/ingress-nginx/kube-webhook-certgen:v1.4.3
        - --ingress-class=nginx
        - --configmap=$(POD_NAMESPACE)/k8sbfr-my-ingress-controller
        - --validating-webhook=:8443
        - --validating-webhook-certificate=/usr/local/certificates/cert
        - --validating-webhook-key=/usr/local/certificates/key
        - --enable-metrics=false
        image: registry.k8s.io/ingress-nginx/controller:v1.11.2@sha256:d5f8217feeac4887cb1ed21f27c2674e58be06bd8f5184cacea2a69abaf78dce
        imagePullPolicy: IfNotPresent
        lifecycle:
          preStop:
            exec:
              command:
              - /wait-shutdown
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /healthz
            port: 10254
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: controller
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        - containerPort: 443
          name: https
          protocol: TCP
        - containerPort: 8443
          name: webhook
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 10254
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          requests:
            cpu: 100m
            memory: 90Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            add:
            - NET_BIND_SERVICE
            drop:
            - ALL
          readOnlyRootFilesystem: false
          runAsNonRoot: true
          runAsUser: 101
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - mountPath: /usr/local/certificates/
          name: webhook-cert
          readOnly: true
      dnsPolicy: ClusterFirst
      nodeSelector:
        kubernetes.io/os: linux
      serviceAccountName: k8sbfr-my-ingress
      terminationGracePeriodSeconds: 300
      volumes:
      - name: webhook-cert
        secret:
          secretName: k8sbfr-my-ingress-admission
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: k8sbfr-my-ingress
    app.kubernetes.io/name: k8sbfr-my-ingress
    app.kubernetes.io/part-of: k8sbfr-my-ingress
    app.kubernetes.io/version: 1.11.2
  name: nginx
spec:
  controller: k8s.io/k8sbfr-my-ingress
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    app.kubernetes.io/component: admission-webhook
    app.kubernetes.io/instance: k8sbfr-my-ingress
    app.kubernetes.io/name: k8sbfr-my-ingress
    app.kubernetes.io/part-of: k8sbfr-my-ingress
    app.kubernetes.io/version: 1.11.2
  name: k8sbfr-my-ingress-admission
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: k8sbfr-my-ingress-controller-admission
      namespace: k8sbfr-my-ingress
      path: /networking/v1/ingresses
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: validate.nginx.ingress.kubernetes.io
  rules:
  - apiGroups:
    - networking.k8s.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - ingresses
  sideEffects: None
